13. bugs solved: text get selected when clicked divs + z-index

--- a/react-application/src/components/Header/header.css
+++ b/react-application/src/components/Header/header.css
@@ -70,3 +70,11 @@ nav.hidden-nav__content > div {
   color: var(--very-dark-blue);
   padding-left: 5px;
 }
+
+.main-logo,
+.visible-nav > div {
+  user-select: none;
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+}
